--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "QR Generator",
+  "name": "QR Generator Free",
   "description": "free QR generator",
   "version": "1.0.0",
   "action": {
